--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,19 +4,22 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_calculator"
-            android:icon="@drawable/ic_iso_black_24dp"
-            android:title="@string/menu_calculator" />
-        <item
-            android:id="@+id/nav_stats"
-            android:icon="@drawable/ic_menu_pie"
-            android:title="@string/menu_stats" />
-
+        <item android:title="관리">
+            <menu>
+<!--                <item-->
+<!--                    android:id="@+id/nav_home"-->
+<!--                    android:icon="@drawable/ic_menu_camera"-->
+<!--                    android:title="@string/menu_home" />-->
+                <item
+                    android:id="@+id/nav_calculator"
+                    android:icon="@drawable/ic_iso_black_24dp"
+                    android:title="@string/menu_calculator" />
+                <item
+                    android:id="@+id/nav_stats"
+                    android:icon="@drawable/ic_menu_pie"
+                    android:title="@string/menu_stats" />
+            </menu>
+        </item>
     </group>
 
     <item android:title="기타">
@@ -26,9 +29,9 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="@string/menu_share" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:id="@+id/nav_setting"
+                android:icon="@drawable/ic_menu_setting"
+                android:title="@string/menu_setting" />
         </menu>
     </item>
 
